// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/MainPannel Default 1`] = `
<div
  className="makeStyles-scrollbar"
  data-simplebar={true}
>
  <div
    className="simplebar-wrapper"
  >
    <div
      className="simplebar-height-auto-observer-wrapper"
    >
      <div
        className="simplebar-height-auto-observer"
      />
    </div>
    <div
      className="simplebar-mask"
    >
      <div
        className="simplebar-offset"
      >
        <div
          className="simplebar-content-wrapper"
        >
          <div
            className="simplebar-content"
          >
            <div
              className="MuiBox-root MuiBox-root makeStyles-root"
              data-cy="main-pannel"
            >
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id0"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id0"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id0"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id0"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id0"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id0"
                >
                  script
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="simplebar-placeholder"
    />
  </div>
  <div
    className="simplebar-track simplebar-horizontal"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
  <div
    className="simplebar-track simplebar-vertical"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
</div>
`;

exports[`Storyshots Components/MainPannel Empty 1`] = `
<div
  className="makeStyles-scrollbar"
  data-simplebar={true}
>
  <div
    className="simplebar-wrapper"
  >
    <div
      className="simplebar-height-auto-observer-wrapper"
    >
      <div
        className="simplebar-height-auto-observer"
      />
    </div>
    <div
      className="simplebar-mask"
    >
      <div
        className="simplebar-offset"
      >
        <div
          className="simplebar-content-wrapper"
        >
          <div
            className="simplebar-content"
          >
            <div
              className="MuiBox-root MuiBox-root makeStyles-root"
              data-cy="main-pannel"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="simplebar-placeholder"
    />
  </div>
  <div
    className="simplebar-track simplebar-horizontal"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
  <div
    className="simplebar-track simplebar-vertical"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
</div>
`;

exports[`Storyshots Components/MainPannel Rich 1`] = `
<div
  className="makeStyles-scrollbar"
  data-simplebar={true}
>
  <div
    className="simplebar-wrapper"
  >
    <div
      className="simplebar-height-auto-observer-wrapper"
    >
      <div
        className="simplebar-height-auto-observer"
      />
    </div>
    <div
      className="simplebar-mask"
    >
      <div
        className="simplebar-offset"
      >
        <div
          className="simplebar-content-wrapper"
        >
          <div
            className="simplebar-content"
          >
            <div
              className="MuiBox-root MuiBox-root makeStyles-root"
              data-cy="main-pannel"
            >
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id0"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id0"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id0"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id0"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id0"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id0"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id0"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id1"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id1"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id1"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id1"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id1"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id1"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id1"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/1
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id1"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id1"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id1"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id1"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id2"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id2"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id2"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id2"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id2"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id2"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id2"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/2
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id2"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id2"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id2"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id2"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id3"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id3"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id3"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id3"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id3"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id3"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id3"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/3
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id3"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id3"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id3"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id3"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id4"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id4"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id4"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id4"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id4"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id4"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id4"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/4
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id4"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id4"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id4"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id4"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id5"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id5"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id5"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id5"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id5"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id5"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id5"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/5
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id5"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id5"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id5"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id5"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id6"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id6"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id6"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id6"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id6"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id6"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id6"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/6
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id6"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id6"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id6"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id6"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id7"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id7"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id7"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id7"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id7"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id7"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id7"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/7
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id7"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id7"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id7"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id7"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id8"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id8"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id8"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id8"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id8"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id8"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id8"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/8
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id8"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id8"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id8"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id8"
                >
                  script
                </div>
              </div>
              <div
                className="MuiGrid-root MuiGrid-container"
                data-cy="main-pannel-outer-grid-bullet-id9"
              >
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-left-grid-bullet-id9"
                >
                  <Grow
                    in={true}
                  >
                    <div
                      className="MuiBox-root MuiBox-root makeStyles-root"
                      data-cy="bullet-id9"
                    >
                      <div
                        className="MuiBox-root MuiBox-root makeStyles-root"
                        data-cy="bullet-header-id9"
                      >
                        <div
                          className="MuiBox-root MuiBox-root"
                          data-cy="bullet-header-ms-id9"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            ::
                            0
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-methodBadge"
                          data-cy="bullet-header-method-id9"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            GET
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-url"
                          data-cy="bullet-header-url-id9"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            http://localhost/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/foo/bar/baz/9
                          </p>
                        </div>
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-filler"
                          data-cy="bullet-header-filler-id9"
                        />
                        <div
                          className="MuiBox-root MuiBox-root makeStyles-statusBadge"
                          data-cy="bullet-header-status-id9"
                        >
                          <p
                            className="MuiTypography-root MuiTypography-body1"
                          >
                            200
                          </p>
                        </div>
                        <img
                          alt="Down carret"
                          aria-describedby={null}
                          className="makeStyles-downCarret "
                          data-cy="bullet-header-collapse-id9"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          onTouchStart={[Function]}
                          src="down_carret.svg"
                          title="Uncollapse"
                        />
                      </div>
                      <div
                        className="MuiCollapse-container MuiCollapse-hidden"
                        style={
                          Object {
                            "minHeight": "0px",
                          }
                        }
                      >
                        <div
                          className="MuiCollapse-wrapper"
                        >
                          <div
                            className="MuiCollapse-wrapperInner"
                          />
                        </div>
                      </div>
                    </div>
                  </Grow>
                </div>
                <div
                  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                  data-cy="main-pannel-right-grid-bullet-id9"
                >
                  script
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="simplebar-placeholder"
    />
  </div>
  <div
    className="simplebar-track simplebar-horizontal"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
  <div
    className="simplebar-track simplebar-vertical"
  >
    <div
      className="simplebar-scrollbar"
    />
  </div>
</div>
`;
